     save a MP game due to a network or OOS error (bug #19562)
   * Fixed bug #19538: Filters matching 0 saved games cause crash
 * Whiteboard
   * Fixed bug #19369: Using planning mode can cause losing ability to move my units
   * Fixed bug #19408: Crash shortly after executing invalid multi-turn move
   * Fixed bug #19581: Leader can still move after a planned recall
 * WML engine:
   * new action tag: [clear_menu_item] id=...
   * new key: [set_menu_item][command]delayed_variable_substitution=yes|no
   * Removed support for the deprecated "colour=", "debug_border_colour=",
     and [colour_adjust]
   * Fixed bug #18996: Increase random number generation range.
   * Made it possible to disable the credits screen at the end of a campaign
     by specifying end_credits=no in the final [endlevel] action, or in the
     [campaign] definition (defaults to yes)
   * Added [modify_side] color= attribute, which changes a side's team color
     range (feature/bug #18772)
   * Removed support for the deprecated [removeitem]
   * Implemented ~BLEND(r,g,b,o) image path function, which blends the image
     with a specified RGB color according to certain opacity (factor or
     percentage) (feature/bug #11590)
   * [find_path] now returns a "hexes" key instead of a "length" key inside
     the output array
   * Introduce inline SSF support in action tags [allow_recruit], [disallow_recruit],
     [set_recruit], [gold] and [modify_ai]
   * [gold][filter_side] and [modify_ai][filter_side] are deprecated, use inline
     SSF instead
   * Action tags [modify_side], [place_shroud] and [remove_shroud] now default
     to "all sides" instead of side=1 if left empty.
   * Introduce support for [filter_owner]<SSF> in SLFs. For villages. Keeps
     backwards compatibility for inline owner_side= at the cost of
     confusing syntax (due to (possible) duplicate side information).
     This also adds SSF support in [store_villages].