@@ -82,6 +82,7 @@ Version 1.11.0-svn:
      units
    * Fixed bug #19408 : Crash shortly after executing invalid multi-turn move
    * Fixed bug #19581: Leader can still move after a planned recall.
+   * Shortened all context menu items.
 
  * Miscellaneous and bug fixes:
    * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
