@@ -125,6 +125,7 @@ Version 1.11.0-svn:
    * Fixed bug #19369: Using planning mode can cause losing ability to move my units
    * Fixed bug #19408: Crash shortly after executing invalid multi-turn move
    * Fixed bug #19581: Leader can still move after a planned recall
+   * Shortened all context menu items
  * WML engine:
    * new action tag: [clear_menu_item] id=...
    * new key: [set_menu_item][command]delayed_variable_substitution=yes|no
